ta to ma - corrections complete

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2189,3 +2189,154 @@ jAcnxnashakitxya adhideVvate. guruliMgavanunx sAkASxtakxrisikoLuLxva sAdhakanige
 \meaning{\arthanonum{AMtayaRvanunx tiLidukoMDu mADuva kAyaRgaLa sAdhane:} \ullekha{``miVrida kirxyAliMgasididhx - aMtaraMgadalilx pArxNaliMgavu sAdhayxvAgutitxhudu (basaTiV. {\rm\em{II,}} 233-879 TiVku); mAgaRkirxVliMgaviDidu miVridakirxVliMgasididhx miVridakirxVliMgaviDidu kirxyAniSapxtitxliMgasididhx (savasaM. 1; basava. 878-229).}}
 \end{entry}
 
+\begin{entry}
+\word{rudarxna haMgu}
+\src{va}
+\meaning{\arthanonum{aneVka kamaRgaLanunx mADutAtx janAmxMtaragaLalilx huTiTx konege layakUkx oLagAdare, rudarxna haMginalilxdAdxneMdathaR. EkeMdare laya rudarxna kataRvayx (va.pa.koV. 315):}
+\ullekha{rudarxna haMginalilx jagavelalx layavAgutitxpaR kAraNa, pArxNa liMgigaLeMbudu husi (savasaM.8; moVLimA. 1969-638); honunx rudarxna haMgu, heNuNx viSuNxvina haMgu, maNuNx barxhamxna haMgu (savasaM. 10; kADasi. 27-16).}}
+\end{entry}
+
+\begin{entry}
+\word{rudArxkiSxya vidhagaLu}
+\src{koV}
+\meaning{\arthanonum{EkamuKa rudArxkiSxyiMda modalugoMDu catudaRshamuKagaLavaregina rudArxkiSxgaLidudx, avugaLige nidiRSaTx adhideVvategaLu saMbaMdhapaTiTxdAdxre. beVre beVre saMKeyxya muKagaLuLaLx rudArxkiSxgaLanunx nidiRSaTxvAda sAthxnagaLalilx mAtarx dharisabeVku:}
+\ullekha{rudArxkiSxya vidhagaLu- 14 muKagaLavarege rudArxkiSxgaLirutatxve. EkamuKa rudArxkiSxyu parashivage, 2 muKavuLaLx rudArxkiSxyu IshAnage, 3 muKavuLaLx rudArxkiSxyu \hbox{aginxge}, 4 muKavuLaLx rudArxkiSxyu barxhamxnige, 5 muKavuLaLx rudArxkiSxyu sadAshivanige, 6 muKavuLaLx rudArxkiSxyu SaNumxKanige, 7 muKavuLaLx rudArxkiSxyu anaMtanige, 8 muKavuLaLx rudArxkiSxyu viGenxVshavxranige, 9 muKavuLaLx rudArxkiSxyu BeYravanige, 10 muKavuLaLx rudArxkiSxyu mAdhavanige, 11 muKavuLaLx rudArxkiSxyu EkAdasharudarxrige, 12 muKavuLaLx rudArxkiSxyu dAvxdashAditayxrige, 13 muKavuLaLx rudArxkiSxyu maheVshavxranige, 14 muKavuLaLx rudArxkiSxyu catudaRshamanugaLige saMbaMdhapaDutatxve. shiKAsAthxnadalilx EkamuKarudArxkiSxyanunx; masatxkadalilx 2 muKa, 3 muKa matutx 12 muKagaLuLaLx mUru rudArxkiSxgaLanunx; 11 muKagaLuLaLx rudArxkiSxgaLanunx shiravanunx baLasi; 5 muKa, 7 muKa athavA 10 muKagaLuLaLx rudArxkiSxgaLanunx kaNaRdalilx; kaMThadalilx 8 muKagaLuLaLx rudArxkiSxgaLanunx; 6 muKagaLuLaLx rudArxkiSxgaLanunx, 4 muKagaLuLaLx rudArxkiSxgaLanunx uradalilx; 13 muKavuLaLx rudArxkiSxgaLanunx bAhuvinalilx; 9 muKagaLuLaLx rudArxkiSxgaLanunx muMgeYyalilx, 14 muKagaLuLaLx rudArxkiSxgaLanunx vakaSxsathxLadalilx dharisuvudu (shivAkoV. 95-176).}}
+\end{entry}
+
+\begin{entry}
+\word{rUpinoLagaNa bayalu}
+\src{va}
+\meaning{\arthanonum{aMgakekx deVha, iMdirxya itAyxdigaLiruvudariMda adu rUpinoLagaNa liMga\-venisikoLuLxtatxde. Adare A aMgavu bayalu enisikoLuLxva parashivana aMshavAdudariMda, adu sadayxkekx saNaNx bayalu enisikoLuLxtatxde. AdudariMda rUpinoLagaNa bayalu eMdare deVheVMdirxyAdigaLa saMpuTadalilx aDagiruva aMga (Atamx) eMdAgutatxde (va.pa.koV. 316):}
+\ullekha{bayaloLagaNa rUpu, rUpinoLagaNa bayalu, uBayava vicArisi noVDuvalilx kuMBadoLage niVra tuMbi siMdhuvinoLage muLugisalAgi, adaroLagU niVru, horagU niVru (savasaM. 8; mAreVsha- 1285-446).}}
+\end{entry}
+
+\begin{entry}
+\word{rUpu nirUpu}
+\src{va}
+\meaning{\arthanonum{viVrasheYva pariBASeyalilx idanunx eraDu athaRgaLalilx baLasidAdxre. parashivanige rUpu matutx nirUpugaLeraDanUnx AroVpisabahudu eMbudu oMdu athaR. saqSiTxpUvaRda munanx avanige yAva rUpavU iruvudilalx. Adare tAneV jagavAdAga avanige jagatitxna rUpa barutatxde. Adare jagatitxna rUpa avana shAshavxta rUpavalalx. EkeMdare shiva jagavAdaMte, jagavAgadiralU balalx. alalxde, avanige \hbox{rUpavU} ilalx, nirUpavU ilalx eMdu heVLabahudu. jagatitxna rUpa paDedAga shivanu nirUpanalalx, saqSiTxpUvaRsithxtiyalilx rUpa\-nalalx.}}
+\newmeaning{\arthanonum{matotxMdathaRdalilx, rUpu nirUpu eMbudanunx rUpavidudx\-danunx
+ nirUpugoLisuvudu eMdu atheYRsabahudu. jagatitxna parxtiyoMdu
+ vasutxvigU oMdu nidiRSaTx rUpa ide. Adare turiVya sithxtiyalilxruva
+ anuBAvige jagatitxna veYvidhayxmaya vasutx\-gaLu kANutitxdadxrU,
+ avugaLalilx aMtasathxvAgiruva rUpa\-vilalxda parashiva
+ goVcarisutAtxne. hiVge rUpanunx nirUpagoLisuvudeV viVrasheYvana guri (va.pa.koV. 316)}}
+\end{entry}
+
+\begin{entry}
+\word{rUpuvirahita sharaNa}
+\meaning{\arthanonum{sharaNasathxladalilxruva sAdhakanu (shara\-Nanu), tAnu parashivana
+ satiyeMdu tiLidu, tananxdelalxvanUnx avanige haqtUpxvaRkavAgi
+ samapiRsikoLuLxtAtxne. Adare parashiva mAnavarUpada, athavA
+ matAtxva rUpada, gaMDanalalx. parashivanu citfsavxrUpaneMbudanunx
+ avanAgaleV anuBAvada \hbox{mUlaka} aritidAdxne. aMdare sharaNanige
+ parashivanu cidUrxpane horatu, iMdirxyagoVcara rUpanalalx. adeV
+ riVti tAnu cidUrxpada satiyeV horatu iMdirxyagoVcara satiyalalx (va.pa.koV. 317).}}
+\end{entry}
+
+\begin{entry}
+\word{rUpusahita Bakatx}
+\src{va}
+\meaning{\arthanonum{Bakatxsathxladalilxruva sAdhakanige iSaTx\-liMgaveV deVvaru, aMdare avanige parashivarUpasahitaneMbudU gotitxlalx, gotitxdadxrU rUpurahita (nirAkAra) parashivananunx kalipxsikoLaLxlu avanu ashakatx (va.pa.koV. 317):}
+\ullekha{rUpusahita Bakatx, rUpuvirahita sharaNa (savasaM. 9; sagaboV. 577-184).}}
+\newmeaning{\ni{rUpa+sahita+Bakatx - rUpusahitaBakatx}}
+\end{entry}
+
+\begin{entry}
+\word{liMgakekx AdhAravAda Bakatx}
+\src{va}
+\meaning{\arthanonum{parashivanu sadaBxkatxralilx vayxkatxvAdAga, aMtaha sadaBxkatxnu liMgakekx AdhAravAgidAdxneMdathaR:}
+\ullekha{liMgakekx AdhAra Bakatx, jaMgamakekx AdhAra Bakatx, parxsAdakekx AdhAra Bakatx (savasaM. 3; cenanxba. 68-20).}}
+\end{entry}
+
+\begin{entry}
+\word{liMgadaMga}
+\src{va}
+\meaning{\arthanonum{aikayxsathxlavanunx muTiTxdavanu tananx veYshiSaTxyXvanunx kaLedukoMDirutAtxne. alalxde, tAnu shivana vAhana athavA \hbox{shivana} aMga eMdu tiLidukoMDirutAtxne:}
+\ullekha{A yukitxyiMda Bakitx nelegoMDu, A BakitxyiMda satayx nelegoMDu satayx\-doDalu liMga\-daMgavAgi ipApxtane cananxbasavaNaNxpirxya BoVga malilxkAjuRna liMgavu tAnAgi (savasaM. 08; parxsABoV. 26-12).}}
+\newmeaning{\ni{liMgada+aMga - liMgadaMga}}
+\end{entry}
+%BAjanakekx savARMga musukiTaTxlilx savaRvAyxpAra nirasanavAgirabeVku... rAmeVshavxraliMgadaMga... (savasaM. 5; akakxmamx. 537-167); pUvaRdhAtuvina moVha, utatxradhAtuvina nimoRVha... uBayaliMgadaMga oMdU ilalx, niHkaLaMka... (savasaM. 8; moVLimA. 1910-620); liMgava nereyaridu niSeThx nibebxrasida baLika... liMgadaMgave aMgavAda liMgadeVhige... (savasaM. 11; savxtaMtarx. (vacana saMcaya)); liMgava hiDida hasatxve liMgakekx piVTha kANiro... liMgava dharisipapx aMgave liMgadaMga tAne noVDA... (savasaM. 11; toVMTasi. 184-183); nAdasuKaviDidu sAdhisi mADikoMDavanalalx sharaNa... guruniraMjana cananxbasavaliMgadaMga suKiyAgidaR... (savasaM. 12; deVshikeVM. 441-134)
+
+\begin{entry}
+\word{liMgada nele}
+\src{va}
+\meaning{\arthanonum{parashivana (liMgada) mUla savxrUpa:}
+\ullekha{liMgada neleyanaridalalxde nijaniNaRyava tiLiyabAradu (savasaM. 7; guruba. 387-133).}}
+\end{entry}
+\newmeaning{\ni{liMgada+nele - liMgada nele}}
+%%ayAyx, nimamx caraNaviDidu manava niliside... tanuva marede mahAGanava kaMDe; liMgadaneleviDide... (savasaM. 5; haDaliM. 1317-404)
+
+\smallskip
+
+\begin{entry}
+\word{liMgada beLagu}
+\src{va}
+\meaning{\arthanonum{liMgadhAyxnada oMdu haMtadalilx Bakatxna aMtaHcakuSxvige beLaku goVcarisutatxde (va.pa.koV. 323).}}
+\newmeaning{\ni{liMgada+belagu - liMgada beLagu}}
+\newmeaning{\arthanonum{\SEE{parxkAsha}}}
+\end{entry}
+
+
+
+\begin{entry}
+\word{liMgadhAraNeya sathxLagaLu}
+\src{va}
+\meaning{\arthanonum{kara, kakeSx, ede, amaLoVkayx, gaLa, shira (utatxmAMga).}}
+\end{entry}
+
+\begin{entry}
+\word{liMgadhAraNeya sAthxna}
+\src{saM}
+\meaning{\arthanonum{diVkASxkAladalilx shirxVguruvu oMdu liMgavanunx tegedukoMDu aBiSeVka, pArxNaparxtiSAThxpane modalAda vidhigaLiMda adanunx shudidhxgoLisi, hasatxmasatxka saMyoVgadiMda shiSayxna citakxleyanunx maMtarxpUvaRkavAgi AvAhane mADi, A liMgakekx samAyoVjisutAtxne. hiVge pArxNaparxtiSeThxyAda iSaTxliMgakekx pArxNaliMga-BAvaliMgagaLa anusaMdhAnavAgutatxde. sUthxlashariVradalilx iSaTxliMga, sUkaSxmXshariVradalilx pArxNaliMga, kAraNashariVradalilx BAvaliMgagaLa sAthxpaneyeV liMgadhAraNeya sAthxnagaLu. aMteyeV iSaTxliMgavanunx masatxka, koraLu, kakeSx (kaMkuLu) edeya meVle, kukiSx (udarada meVle), athavA hasatxdalilx dharisabeVku. nABiya keLage, jaTeya tudiyalilx, tirxkasAthxnadalilx (benunx), malasAthxnagaLalilx liMgavanunx dharisabAradu:}}
+\smallskip
+\begin{shl}
+savaRlakaSxNasaMpanenxV tasimxnf liMgeV vishoVdhiteV |\\[1pt]
+piVThasithxteV{\char'263}BiSiketxV ca gaMdhapuSApxdipUjiteV ||\\[1pt]
+maMtarxpUteV kalAM sheYviVM yoVjayeVdivxdhinA guruH |\\[1pt]
+shiSayxsayx pArxNamAdAya liMgeV tatarx nidhApayeVtf ||\\[1pt]
+talilxMgaM tasayx tu pArxNeV sAthxpayeVdeVkaBAvataH |\\[1pt]
+EvaM kaqtAvx guruliRMgaM shiSayxhasetxV nidhApayeVtf ||
+\end{shl}
+\smallskip
+\pauthor{(si. shi., 6. 22-25)}
+\smallskip
+\begin{shl}
+iSaTxM sUthxlatanoVH porxVkatxM pArxNaM sUkaSxmXtanoVH samxqqtamf |\\[1pt]
+BAvAKayxM kAraNaseyxYvaM tanutarxyagataM tarxyamf ||
+\end{shl}
+\smallskip
+\pauthor{(caM. A., kirx. pA., 3. 45)}
+\smallskip
+\begin{shl}
+mUdhinxR vA kaMThadeVsheV vA kakeSxV vakaSxHsathxleV{\char'263}pi vA |\\[1pt]
+kukwSx hasatxsathxleV vApi dhArayeVlilxMgameYshavxramf ||\\[1pt]
+nABeVradhasAtxlilxMgasayx dhAraNaM pApakAraNamf |\\[1pt]
+jaTAgerxV tirxkaBAgeV ca malasAthxneV na dhArayeVtf ||
+\end{shl}
+\smallskip
+\pauthor{(si. shi., 6. 52-53; shi. ta. ra., 9. 8. 69-70)}
+\end{entry}
+
+\begin{entry}
+\word{liMgavaDaguvudu}
+\src{va}
+\meaning{\arthanonum{I pAriBASika padavanunx eraDu riVtiyalilx atheYRsabahudu.}
+\artha{iSaTxliMgavanunx noVDutatx dhAyxnadalilx maganxvAgi, konege tananxnUnx maretare Aga liMgavaDagutatxde.}
+\artha{anuBAvadalilx anuBAviyu \hbox{tananxnunx} mareyuvudU alalxde liMgavanUnx mareyuvudariMda AgalU liMgavaDagutatxde. Adare yAva athaRdalilx tegedukoMDarU tAnu idiru (jAcnxtaq, jecnxVya) gaLeMba uBaya\-vilalxdiruvudu diTa:}
+\ullekha{I niraMgava tiLidu niMdalilx beVre liMga\-vaDaguvadakekx uBayavuMTeMba daMduga beVDa (savasaM. 5; moVshima. 1161-345).}}
+\end{entry}
+
+\begin{entry}
+\word{liMgavilalxda noVTa}
+\src{va}
+\meaning{\arthanonum{iSaTxliMgavanunx paDeda Bakatxnu adanunx kelavu kaSxNa pUje
+ mADidare sAladu. sharaNara parxkAra adanunx diTiTxsi noVDi, A
+ daqSiTxyoVgada \hbox{mUlaka} AnaMdaparavashanAgabeVku. Adare
+ pArxNaliMgisathxladalilxruva sAdhakanu iSaTxliMgavilalxdeyU
+ dhAyxnasithxtiyalilx tananx oLagaNiNxniMda liMgavanunx
+ noVDutAtxne. I liMgavilalxda noVTavanunx yoVga, samAdhi, anuBAva
+ muMtAgiyU kareyabahudu (va.pa.koV. 327):}
+\ullekha{guruvilalxda kUTa, liMgavilalxda noVTa, jaMgamavilalxda mATa, parxsAdavilalxda UTa, I nAlakxra beVTa\-vilalxda kUTa, kUDalacenanxsaMgayayxnenalilalxda ATa (savasaM. 3; cenanxba. 1187-411).}}
+\end{entry}
+
+
