work in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2340,3 +2340,69 @@ jaTAgerxV tirxkaBAgeV ca malasAthxneV na dhArayeVtf ||
 \end{entry}
 
 
+\begin{entry}
+\word{vAyuvina aMsha}
+\src{va}
+\meaning{\arthanonum{paMcaBUtagaLalilx oMdAda vAyuvina paMciVkaraNadiMda deVhatatatxvXdalilx uMTAguva aidu viSayagaLu.}
+\ullekha{harivudu kuLiLxruvudu ELuvudu meYmuriyuvudu naDevudu I aidu vAyuvina aMsha (savasaM. 3; cenanxba. 1351-477).}}
+%\ullekha{paqthivxya vaMshikadalilx... vAyuvinaMshikadalilx Atamxnu baMdiralikAkxgi... (savasaM. 6; avareV. 718-215); paqthivxya aMshika... vAyuvinaMshika jiVvAtamxnAgi... (savasaM. 7; dasarayayx. 1059-326); paqthivx aMshavanaLidu... vAyuvinaMshavanaLidu cidAvxyuveV aMgavAgi... (savasaM. 12; deVshikeVM. 375-114).}}
+\end{entry}
+
+\begin{entry}
+\word{vAyuvina paMciVkaraNa}
+\meaning{\arthanonum{= paMciVkaraNa}}
+\end{entry}
+
+\begin{entry}
+\word{vAyuvina pUvARsharxya}
+\src{va}
+\meaning{\arthanonum{vAyuvina hiMdina iravu, -asitxtavx:}
+\ullekha{vAyuvina pUvARsharxya dhAyxnadiMda \hbox{hoVhudu} (savasaM. 3; cenanxba. 47-15).}}
+\end{entry}
+
+\begin{entry}
+\word{vAyxpArada late}
+\src{va}
+\meaning{\arthanonum{vAyxvahArika athavA pArxpaMcika jiVvana:}
+\ullekha{OMkAravapapx parxNamava pariNAmisi, vAyxpArada lateya baLiLxya beVra ketutx paviR... saMsArakekx sikakxda niMda nija tAnAgi liMgeYkayxvu (savasaM. 8; moVLimA. 1851-603, 625).}}
+\end{entry}
+
+\begin{entry}
+\word{viSuNxmUtiR liMgavAguvudu}
+\src{va}
+\meaning{\arthanonum{iSaTxliMgavanunx mUru vividha haMtagaLa udedxVshadiMda
+ dharisutAtxre. adanunx aMgeY meVle irisi pUjisabeVku eMbudu modalaneya
+\hbox{udedxVsha.} vividha riVtiya apaRNegaLigiMtalU tananx
+karaNeVMdirxyAdigaLanenxV apiRsuva udedxVshadiMda parashivananenxV
+(liMgavanenx) savARMgadalilx sAthxpisabeVku eMbudu eraDaneya
+udedxVsha. anuBAvadalilx tAneV liMgavAgabeVku eMbudu mUraneya
+udedxVsha. Adare namamx vividha riVtiya durAse matutx
+durudedxVshagaLiMda kUDida kAyadalilx liMga sikikxhAkikoMDiruvudariMda, hAgU liMgavanunx maretu namamx poVSaNege nAvu gamana
+koDuvudariMda, liMgavu viSuNxvina sithxti\-yiMda biDugaDe
+hoMdilalxveMdathaR (viSuNx jagatatxnunx rakiSxsuvaMte nAvu namamxnunx
+poVSisi, rakiSxsikoLuLxtetxVve. AdudariMda namamxlilxruva liMgavu
+sithxtige oLagAgide) (va.pa.koV. 338).}
+\ullekha{guruveMba BAva barxhamxmUtiR, liMgaveMba BAva viSuNxmUtiR, jaMgamaveMba BAva rudarxmUtiR (savasaM. 6; aMbiga. 138-47); barxhamxmUtiR guruvAda, viSuNxmUtiR liMga\-vAda, rudarxmUtiR jaMgamavAda (savasaM. 8; moVLimA. 1768-578).}}
+\newmeaning{\ni{viSoNxVH mUtiRH - viSuNxmUtiRH}}
+\end{entry}
+%% suSupitxyoVgadalilx AnaMdisutitxpuRdeV viSuNxmUtiRyu savxpanxdalilx parxpaMcamaM saqSiTxsutitxpuRdeV barxhamxmUtiRyu. (savasaM. 13; mumamxDi. 1080-535)
+
+\begin{entry}
+\word{viSuNxvina sithxti}
+\src{va}
+\meaning{\arthanonum{barxhamxnu saqSiTxsida jagatatxnunx viSuNxvu
+ rakiSxsutAtxne. rakaSxNAkAyaRkekx sithxti eMdU hesaru. viSuNxvina
+ sithxtigU liMgakekx mADuva neYveVdayxkUkx ililx moVLige mArayayx
+ saMbaMdha kalipxsidAdxne. viSuNxvu jagatatxnunx rakiSxsidaMte nAvU
+ \hbox{namamx} deVhavanunx rakiSxsikoLuLxtetxVve. Adare keVvala deVhapoVSaNegoVsakxra nAvu neYveVdayx (parxsAda) BuMjisidare Bakitx mADidaMtAguvudilalx. AdadxriMda nijavAda Bakitx mADuvavanu
+ deVharakaSxNABAvavanunx, aMdare viSuNxvina sithxtiyanunx, biTuTx liMgakekx neYveVdayx mADirabeVku (va.pa.koV. 339):}
+\ullekha{viSuNxvina sithxti\-yanaridalalxde liMgakekx neYveVdayxva toVralAgadu. rudarxna Bayava hiMgiyalalxde liMgasaMgiyAgabAradu (savasaM. 8; moVLimA. 1968-637).}}
+\end{entry}
+
+\begin{entry}
+\word{viSuNxvina haMgu}
+\src{va}
+\meaning{\arthanonum{viSuNxvu heVge sithxtiyalilx niratanAgirutAtxnoV hAgeyeV, jaMgamanU saha keVvala deVharakaSxNeyalelxV niratanAgidadxre, Atanu mADuva kAyaRgaLelAlx vayxthaR. Aga avanu viSuNxvina haMginalilxdAdxneMdathaR (va.pa.koV. 340):}
+\ullekha{honunx rudarxna haMgu, heNuNx viSuNxvina haMgu, maNuNx barxhamxna haMgu, iMtapapx tirxmUtiRgaLa haMginiMdAda deVhavu mitheyxyeMdu visajiRsalariyaru (savasaM. 10; kADasi. 27-16).}}
+\end{entry}
+
