correction in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -2406,3 +2406,135 @@ sithxtige oLagAgide) (va.pa.koV. 338).}
 \ullekha{honunx rudarxna haMgu, heNuNx viSuNxvina haMgu, maNuNx barxhamxna haMgu, iMtapapx tirxmUtiRgaLa haMginiMdAda deVhavu mitheyxyeMdu visajiRsalariyaru (savasaM. 10; kADasi. 27-16).}}
 \end{entry}
 
+\begin{entry}
+\word{shakitx matutx tatatxvX}
+\src{va}
+\meaning{\arthanonum{saqSiTxya vacanagaLalilx parAshakitxyAdiyAgi aidu shakitxgaLa vicAravalalxde, paqthivx muMtAda aidu tatatxvXgaLa vicAravU barutatxde. kelavu veVLe paMcashakitxgaLa matotxMdu hesareV paMcaBUtagaLeMba naMbikeyU mUDutatxde. aMtU paMcaBUtagaLu paMcashakitxgaLa beVre hesarugaLu athavA beVre rUpagaLu.}}
+\newmeaning{\arthanonum{\qquad paMcaBUtagaLu shakitxya vividha rUpagaLeMbudakekx paMciV\-karaNada
+ vacanagaLu puSiTx niVDutatxve. avugaLa guNadhamaRgaLa vishelxVSaNeyu
+I mAtanunx samathiRsutatxde.}}
+\newmeaning{\arthanonum{\qquad kAThiNayx dhamaRvanunx hoMdiruva paqthivxV tatatxvXkekx rUpa, rasa,
+ gaMdha, shabadx matutx kAThiNayx eMba aidu guNagaLive. eraDu
+ kaThiNa vasutxgaLa GaSaRNeyu shabadxvanunx utApxdisabalalxdu;
+ avugaLalilx I guNagaLiruvudariMdaleV, kaThiNa vasutxgaLu iMdirxya
+ saMpa\-kaRkekx baMdAga rUparasAdi viSayagaLanunx
+ utApxdisabalalxvu. adeV riVti, jalatatatxvXkekx kAThiNayxvanunx biTuTx
+uLida nAlukx guNagaLU, aginxge shabadx, sapxshaR matutx rUpa (teVja)
+eMba mUru guNagaLU, vAyuvige shabadx matutx sapxshaRveMba eraDu
+guNagaLU, AkAshakekx shabadxveMba oMdeV guNavU ide.}}
+\newmeaning{\arthanonum{\qquad paqthivxVtatatxvXkekx kAThiNayxvide eMdarU oMdeV, BAravanunx
+ taDedukoLuLxva \hbox{shakitx} ide eMdarU oMdeV. kaThiNa vasutxgaLoLage
+ \hbox{matotxMdu} vasutx parxveVshisalu sAdhayxvilalx. jalatatatxvXkekx
+ baMdhaka guNavide. niVranunx seVrisi mudedx mADabahudu; niVru hoVda
+ vasutx\-vina BAgagaLu biDibiDiyAgutatxve. aginxge suDuva athavA pAka
+ mADuva shakitxyide. idariMda vasutxvina modalina guNa\-gaLu
+ nAshavAgutatxve hAgU hosa guNagaLu barutatxve. vasutx\-gaLanunx oMdu
+ kaDeyiMda matotxMdu kaDege oyuyxvudu vAyuvina guNa; hAgU
+ vasutxgaLige avakAsha mADikoDuvudu AkAshada guNa.}}
+\newmeaning{\arthanonum{\qquad parxpaMcada parxtiyoMdu vasutxvinalilx aidU BUtagaLu
+ baLasalapxTiTxdadxrU, avugaLa parxmANada veYshiSaTxyXdiMdAgi
+ vasutxgaLu vishiSaTx guNagaLanunx paDeyutatxve. kaThiNa
+ vasutxgaLalilx paqthivxV tatatxvXda aMsha hecucx, uLida tatatxvXgaLa
+ aMsha kaDime; darxva vasutxgaLalilx jalatatatxvX parxdhAna; gALi, hoge,
+ muMtAda vasutxgaLalilx vAyu tatatxvXparxdhAna; beMki, uSaNx
+ muMtAdavugaLalilx aginxtatatxvX parxdhAna; KAli sathxLadalilx (gALiyU
+ ilalxda sathxLagaLalilx) AkAshatatatxvX parxdhAna (va.pa.koV. 349):}
+\ullekha{shakitxtatatxvX, kale, kAla, niyati, sUkeSxmX iMtu tatatxvXMgaLu aidu (savasaM. 4; sidadhxrA. 1005-282).}}
+\smallskip
+\newmeaning{\arthanonum{\SEE{shakitx, paMciVkaraNa}}}
+\end{entry}
+
+\begin{entry}
+\word{shabuda liMgeYkayx}
+\src{va}
+\meaning{\arthanonum{nijavAgiyU liMgeYkayxnAgade liMgeYkayxnAde eMdu
+ heVLuvavanu. vAsatxvavAgi ahaMnaSaTxnAdavanu nAnu liMgeYkayxnAde
+ eMdu heVLidare adu keVvala viroVdhABAsavAgutatxde. athavA hAge
+ heVLuvavanige ahaMnaSaTxvAgilalxveMdathaR. avanu shabadxliMgeYkayx athavA keVvala vAga\-devxYti (va.pa.koV. 352):}
+\ullekha{liMga liMgeYkayxneMba, shabudaliMgeYkayxMge BakitxyeMto?... (savasaM. 8; bahurU. 177-71).}}
+\end{entry}
+
+\begin{entry}
+\word{sharaNaMge AkAshavaMga}
+\src{va}
+\meaning{\arthanonum{kaMThasAthxnadalilxruva vishudadhxcakarxdalilx athavA
+ adaralilxruva AkAshaveMba tatatxvXdalilx (athavA parAshakitxyalilx)
+ shivanu nelesidudx, parxsAdaliMgaveMba hesariniMda
+ kareyalapxDutAtxne. parxsAdaliMgavanunx sAkASxtakxrisikoLuLxva
+ sAdhakanu Aga sharaNasathxlakekx baMdirutAtxne. avanu
+ parxsAdaliMgavanunx sAkASxtakxrisikoLaLxbeVkAdare, namamxlilxruva
+ AkAsha eMba BUtada athavA parAshakitxya duSapxriNAmagaLanunx kaDime
+ mADi, adanunx shudadhx mADabeVkAgutatxde. hiVge shudadhxvAda
+ parAshakitxge AnaMdaBakitxyeMdU hesaride.}}
+\newmeaning{\arthanonum{\qquad sharaNasathxlakekx baruva munanx sAdhakanu AgaleV ariSaDavxgaR,  aSaTxmada, \hbox{deVhada} bAdhegaLu, aMtaHkaraNada tamasusx \hbox{muMtAda} AdhAyxtimxka doVSagaLanunx gedidxruvudariMda hAgU \hbox{satayx}, daye,
+ kaSxme, seYraNe, samAdhAna, saMtoVSa, sethxYyaR \hbox{muMtAda} AdhAyxtimxka
+guNagaLanunx beLesikoMDiruvudariMda, avanige uLidiruva oMdeV oMdu
+meTaTxleMdare, shivanige tananxnunx tAneV saMpUNaRvAgi
+samapiRsikoLuLxvudu. iMtha AdhAyxtimxka shikaSxNa paDeda avanige idu
+kaSaTxda mAteVnalalx. hiVge savaRvanUnx samapiRsikoMDa sAdhakanige
+sharaNa (sharaNAgati BAvavanunx hoMdidavanu) eMba hesaridudx, A BAvada
+mUlaka avanu AnaMdavanunx paDeyutAtxne. I AnaMdavu parashivana
+parxsAdavAdudariMda, parashivana A rUpakekx parxsAdaliMgaveMdu
+hesaru.}}
+\newmeaning{\arthanonum{\qquad nimaRlavAda AkAshadalilx yAvoMdu doVSavU ilalxdiruva hAgeyeV sharaNanalilxyU yAva doVSagaLU ilalx, athavA sharaNanalilxruva shudadhxvAda AkAshatatatxvXveV parxsAdaliMgada kAya (aMga) (va.pa.koV. 354):}
+\ullekha{sharaNaMge AkAshavaMgavAgi, aikayxMge mahAbeLage aMgavAdalilx, paMcatatapx kUDi oMdaralilx eyudxvalilx, SaDusathxla rUpAyitutx (savasaM. 8; moVLiyA. 1972-639)}}
+%\ullekha{terahilalxda naDe... kUDalasaMgamadeVvA, nimamx sharaNaMge! (savasaM. 1; basava. 919-240); sacarAcaraveMbudoMdu... tAnu shudadhxvAda sharaNaMge... (savasaM. 2; alalxma. 657-178); iSaTxliMga saMbaMdhavAda... idu kAraNa - sharaNaMge beVre liMgavilalx, beVre aMgavilalx... (savasaM. 3; cenanxba. 1014-334); puruSana muMde... cenanxmalilxkAjuRnanolida sharaNaMge mAyeyilalx, marahilalx, aBimAnavU... (savasaM. 5; akakxma. 282-83); paqthivxya pUvARsharxyavaLida... AkAshada pUvARsharxyavaLida sharaNaMge parxsAdaliMgasAhitayx... (savasaM. 6; Adayayx. 1022-315).}}
+\end{entry}
+
+\begin{entry}
+\word{sharaNaBAvavirahita samayxgfjAcnxni}
+\src{va}
+\meaning{\arthanonum{sharaNanige anuBAvavidadxrU, tAnu aneVka sAri parashivanalilx
+ beretidadxrU tananx veYyakitxkateyanunx inUnx kaLedukoMDilalx. nAnu
+shivana sati eMba BAvadalilx nAnu eMba BAva inUnx avanigide. Adare
+sharaNasathxlada muMdina sathxlavAda aikayxsathxladalilx sAdhakanu tAnu
+parashivanalilx bereyuvudU alalxde, avaniMda tananxnunx
+parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
+\ullekha{sharaNaBAvavirahita samayxjAcnxni (savasaM. 9; sagaBo. 577-184).}}
+\newmeaning{\ni{sharaNasayxBAvaH - sharaNaBAvaH, sharaNaBAveVna virahitaH - sharaNaBAvavirahitaH - samayxgf jAcnxnaM asimxnf asitx iti samayxgf jAcnxniV - sharaNaBAva virahitashacx asw samayxgf jAcnxniV ca}}
+\end{entry}
+
+\begin{entry}
+\word{shariVravilalxda saMbaMdhi}
+\src{va}
+\meaning{\arthanonum{liMgeYkayxnAda sharaNanige shariVra\-vidadxrU avanu adara saluvAgi
+ yAva sAvxthaR kirxyegaLanUnx mADuvavanalalx. avanu elalxvanUnx parashivana
+ iceCxganusAravAgi mADutAtxneyeV horatu, tananx
+ iceCxganu\-sAravAgi alalx, EkeMdare avanu tananx Atamx, iMdirxyagaLu,
+ aMtaHkaraNagaLanunx alalxde deVhavanUnx parashivanige
+ apiRsiruvudariMda, avanige tananxdeMba deVhavilalx:}
+\ullekha{kulavilalxda akulanu, shariVravilalxda saMbaMdhi (savasaM. 3; cenanxba. 759-226).}}
+\end{entry}
+%%samasatx loVkAdi... I shariVravilalxdaMdu nimaRlaneMba gaNeVshavxranAgideRnu... (savasaM. 11; toVMTasi. 87-47)
+
+\begin{entry}
+\word{shilAkASaThxnAyxya}
+\src{va}
+\meaning{\arthanonum{kalilxnalilxna beMki matotxMdu kalilxnoDane GaSiRsadidadxre horabaruvu\-dilalx. kaTiTxgeya beMki horaginiMda beMki taguladidadxre uriyuvudilalx. vacana\-kAraru kalalxnunx guruvigU beMkiyanunx jAcnxnakUkx, kaTiTxge\-yanunx shiSayxnigU hoVlisi, I nAyxyavanunx parxti\-pAdisidAdxre.}}
+\newmeaning{\arthanonum{\qquad shirxVguruvu tananx jAcnxnadiMda shiSayxnalilx AdhAyxtimxka jAcnxnavanunx hotitxsi, avanalilxruva pApaveMba rasavanunx nAshamADi, avananunx jAcnxnamayavanAnxgi mADidAga, shiSayxnu bayalAgutAtxne. Adare guruvu ajAcnxni\-yAgidadxre tAnu I udidxVpana kAyaR mADi, bayalAgade hAge uLiyutAtxne. ideV shilAkASaThxnAyxya:}
+\ullekha{shileyoLagipaR aginxyU kASaThxvaM hatitxdalilx, kASaThxvu bayalapupxdalalxde shile bayalapupxdeVnayAyx?. aMtapapx guru\-vajAcnxniyAgi shiSayxnu jAcnxniyAdudeV shilAkASaThxnAyxyavu (savasaM. 13; mumamxkA. 1038-498).}}
+\newmeaning{\ni{shilA ca kASaThxM - shilAkASeThxV; tayoVH shilAkASaThxyoVH nAyxyaH - shilAkASaThxnAyxyaH}}
+\newmeaning{\arthanonum{\SEE{kASaThxshilAnAyxya}}}
+\end{entry}
+
+\begin{entry}
+\word{shivana cidagxBaR}
+\src{va}
+\meaning{\arthanonum{shivaneMdare citutx. A cititxge `shakitx' eMba guNavidudx, adaralilx elalxvU aDakavAgide. parxtiyoMdu iMdirxyagoVcara vasutxvU shakitxya rUpAdudariMda, hAgU adu parashivaneMba cititxnalilx aMtasathxvAgiruvudariMda parashivaneV cidagxBaRvenisikoLuLxtAtxne (va.pa.koV. 359):}
+\ullekha{carAcarAtamxka parxpaMcavelalx shivana cidagxBaRdiMdudayisipapxdu (savasaM. 5; akakxma. 209-61).}}
+\end{entry}
+
+\begin{entry}
+\word{shivana paMcAvasethx}
+\src{va}
+\meaning{\arthanonum{shivana aidu avasethxgaLAda saqSiTx, sithxti, laya, tiroVdhAna matutx anugarxha:}
+\ullekha{paMcAkaSxraveMbudu shivana paMcAvasethx noVDA (savasaM. 4; sidadhxrA. 1905-545).}}
+\end{entry}
+
+\begin{entry}
+\word{shudadhxparxsAdiya aMga}
+\src{va}
+\meaning{\arthanonum{tananx deVhavanunx shudadhx mADi\-koLaLxlu Bakatxnu parxsAdavanunx sivxVkarisutAtxne. avana deVhavu pArxrabadhxkamaRda PalavAgidadxrU, aMtha deVhada bayakegAgi (hasivanunx hiMgisuva athavA ruciyanunx pUreYsikoLuLxva saluvAgi) parxsAda sivxVkarisabAradu. iMtha Aseyilalxde tegedukoMDa parxsAdadiMda beLeda deVhavaSeTxV shudadhxparxsAdiya aMga\-venisikoLuLxtatxde  (va.pa.koV. 368):}
+\ullekha{kAyakadalilx soVMku aLidu, koMbudu shudadhxparxsAdiya aMga (savasaM. 8; parxleMbaM. 118-48).}}
+\end{entry}
+
