work in progress

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -1463,7 +1463,7 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{sakaleVMdirxya muKadalilx moVhi}
 \src{va}
-\meaning{\arthanonum{aMganu tananx parxtiyoMdu iMdirxyavU parashivana bAyiyeMdu tiLidu, avanigoVsakxra tAnu tinanxbeVku, avanigoVsakxra tAnu noVDabeVku, eMdu muMtAgi parashivanalilx moVhiyAgiruvavanu (va.pa.koV. 388):}
+\meaning{\arthanonum{sAdhakana parxtiyoMdu iMdirxyavU parashivana iMdirxyaveMdu tiLidu, tAnu mADuva parxtiyoMdu kirxyeyanunx parashivanigoVsakxra eMdu tiLidu avanalilx moVhiyAgiruvavanu:}
 \ullekha{sakaleVMdirxyamuKadalilx moVhiyAgi, sadugxrukaruNAmaqtarasa tAneMdariyade enanx mana beragu nibebxragu AyitayAyx (savasaM. 5; akakxma. 25-08).}}
 \end{entry}
 
@@ -1483,14 +1483,14 @@ aneyxYrApAditaM Basamx akalapxmiti nishicxtamf |
 \begin{entry}
 \word{sapepxya Bakitx, sapepxya neVma}
 \src{va}
-\meaning{\arthanonum{sihi, upupx, huLi, kAra muMtAda ruciyanunx hecicxsuva vasutxgaLilalxda AhAraveV sapepxya AhAra. BakatxnAdavanu rucikaravAda AhAravanunx \hbox{vajiRsi}, sapepxya AhAravanenxV sivxVkarisutitxdadxre avana Bakitx hecucxtatxde eMba (suLuLx) naMbikeyiMda mADida Bakitx (va.pa.koV. 396):}
+\meaning{\arthanonum{sihi, upupx, huLi, kAra muMtAda ruciyanunx hecicxsuva vasutxgaLilalxda AhAraveV sapepxya AhAra. BakatxnAdavanu rucikaravAda AhAravanunx \hbox{vajiRsi}, sapepxya AhAravanenxV sivxVkarisutitxdadxre avana Bakitx hecucxtatxde eMba (Barxme) naMbikeyiMda mADida Bakitx (va.pa.koV. 396):}
 \ullekha{aTaTx upipxna kaSaTxvAvudu? aDada upipxna leVsAvudu? biTaTx sapepxya Bakitx yAvudu? mUtarxnALada GAti biDadu (savasaM. 8; maDimA. 453-172).}}
 \end{entry}
 
 \begin{entry}
 \word{samatemuKa suKavirahita}
 \src{va}
-\meaning{\arthanonum{tananx aMtaHkaraNagaLanenxV parashivanige apiRsi, elalx beVku beVDagaLanUnx gedudx, suKaveV barali, duHKaveV barali, citatxshAMtiyanunx kaLedukoLaLxda samabudidhxyuLaLxvanu elalxvanUnx samatABAvadiMda parashivanigapiRsi suKapaDutAtxne. A suKaveV samatAsuKa. adanunx mADadavanu samatAmuKa suKavirahita (oLahorageMba BeVdaBAvavilalxdavanu)  (va.pa.koV. 397):}
+\meaning{\arthanonum{tananx aMtaHkaraNagaLanenxV parashivanige apiRsi, elalx beVku-beVDagaLanUnx gedudx, suKaveV barali, duHKaveV barali, citatxshAMtiyanunx kaLedukoLaLxda samabudidhxyuLaLxvanu elalxvanUnx samatABAvadiMda parashivanigapiRsi suKapaDutAtxne. A suKaveV samatAsuKa. adanunx mADadavanu samatAmuKa suKavirahita (oLahorageMba BeVdaBAvavilalxdavanu)  (va.pa.koV. 397):}
 \ullekha{samatemuKa suKavirahitaMge saninxhitasuKApiRta shUnayx kANA (savasaM. 12; deVshikeVM. 363-115).}}
 \newmeaning{\ni{suKavirahitaH suKeVna virahitaH suKavirahitaH - samatemuKa suKavirahita}}
 \end{entry}
@@ -2536,5 +2536,33 @@ parxteyxVkisikoLaLxlAra. avaneV samayxgfjAcnxni (va.pa.koV. 355):}
 \src{va}
 \meaning{\arthanonum{tananx deVhavanunx shudadhx mADi\-koLaLxlu Bakatxnu parxsAdavanunx sivxVkarisutAtxne. avana deVhavu pArxrabadhxkamaRda PalavAgidadxrU, aMtha deVhada bayakegAgi (hasivanunx hiMgisuva athavA ruciyanunx pUreYsikoLuLxva saluvAgi) parxsAda sivxVkarisabAradu. iMtha Aseyilalxde tegedukoMDa parxsAdadiMda beLeda deVhavaSeTxV shudadhxparxsAdiya aMga\-venisikoLuLxtatxde  (va.pa.koV. 368):}
 \ullekha{kAyakadalilx soVMku aLidu, koMbudu shudadhxparxsAdiya aMga (savasaM. 8; parxleMbaM. 118-48).}}
+\end{entry}
+
+\begin{entry}
+\word{SaTasxthXlagaLige nUroMdu sathxlagaLa saMbaMdha}
+\src{koV}
+\meaning{\arthanonum{japagaLa mUlaka uMTAguva SaTasxthXlagaLu matutx nUroMdu sathxlagaLa saMbaMdha:}
+\ullekha{BakatxsathxLa 15, AcArasathxLa 9 ivu iSaTxliMgada vaqtatxdalilx saMbaMdhavu. maheV\-shavxrasathxla 9, guruliMgasathxla 9 ivu iSaTxliMgada kaTiyalilx saMbaM\-dhavu. parxsAdisathxla 7, shivaliMgasathxla 9 ivu iSaTxliMgada vatuRLadalilx saMbaMdhavu. pArxNaliMgasathxla 5, jaMgamaliMgasathxla 12 idudx ivu iSaTxliMgada goVmuKadalilx saMbaMdhavu. sharaNasathxla 4, parxsAdaliMgasathxla 9 idudx ivu liMgada nALadalilx saMbaMdhavu. aikayxsathxla 4, mahAliMgasathxla 9 ivu iSaTxliMgada goVLakadalilx saMbaMdhavu. hiVge aMgasathxlagaLu 44, liMgasathxlagaLu 57 aMtu 101 sathxlagaLu ive. ivugaLanunx meVle heVLidaMte iSaTxliMgada SaDivxdha sAthxnagaLalilx saMbaMdha mADikoMDu Bakitx jAcnxna veYrAgayxdiMdAcarisutatx japagaLa mUlaka liMga saMbaMdha mADikoMDalilx liMgavu tananxlilx parxkaTavAgutatxde (shivAkoV. 130-297).}}
+\end{entry}
+
+\begin{entry}
+\word{SaDivxdhaliMgaparxsAda}
+\src{va}
+\meaning{\arthanonum{AdhAyxtimxka sAdhaneya oMdu haMtadalilx, iMdirxyagoVcaravAda hAgU BoVjayxyoVgayxvAda vasutxgaLanunx parashivanige apiRsi avugaLanunx parxsAda mADikoLuLxvudu oMdu vayxthaR kirxye eMba arivu mUDutatxde. EkeMdare nAvu iMdirxyagaLa mUlaka EneVnanunx anuBavisutetxVveyoV avelalxvanUnx parxsAdaveMbaMteyeV sivxVkarisabeVku. namamx deVhadalilxruva Aru liMgagaLige rUparasagaMdhAdigaLanunx apiRsi, avanunx parxsAdaveMbaMte AmeVle sivxVkarisidare, Aga nAvu nijavAda parxsAdigaLenisikoLuLxtetxVve. hiVge nAvu GArxNisuva munanx AcAraliMgakekx apiRsidare, A vAsane AcAraliMgada parxsAdavAgutatxde. adeV riVti nAvu rucisidedxlalx guruliMgada parxsAda, noVDidedxlalx shivaliMgada parxsAda, sapxshiRsidedxlAlx jaMgamaliMgada parxsAda, keVLidedxlAlx parxsAdaliMgada parxsAda hAgU namamx iMdirxyagaLU, utatxmavAdudelalxvU mahAliMgada parxsAda. hiVge tAnu anuBavisuva munanx elalxvanUnx liMga\-kakxpiRsuvavanu savARMgaparxsAdi:} \ullekha{Ata GArxNisidudx AcAraliMga, Ata rucisidedxlalx guruliMgaparxsAda Ata noVDidedxlalx shivaliMgaparxsAda, Ata sapxshaRna mADidedxlalx jaMgamaliMgaparxsAda, Ata keVLidedxlalx parxsAdaliMgaparxsAda Atana saveRVMdirxyavelalx paripUNaRvAdadedx mahAliMgaparxsAda (savasaM. 10; cenanxkaM. 824-488).}}
+\newmeaning{\ni{SaDivxdhashacx asw liMgasayx parxsAdashacx - SaDivxdhaliMgaparxsAdaH}}
+\end{entry}
+
+\begin{entry}
+\word{saMgarahitavAda suKa}
+\src{va}
+\meaning{\arthanonum{sitxrXV puruSaribabxrigU saMgadiMdaleV suKapArxpatxvAgutatxde. Adare sAdhakanige liMgAMgasAmarasayxdalilx doreyuva suKa I riVtiya saMgadiMda uMTAdudalalx. adu saMgarahita suKa:}
+\ullekha{aMgarahitavAda saMgavanariyaru. saMgarahitavAda suKavanariyaru. nisasxMgi\-niMda nilava sakaLeVshavxra deVvA, nimamx sharaNa balalx (savasaM. 9; sakaLeVsha. 419-157).}}
+\end{entry}
+
+\begin{entry}
+\word{saMcArada Barxme}
+\src{va}
+\meaning{\arthanonum{jiVvanu kamaRPalagaLiMdAgi saMsAra baMdhanadalilx saMcAra mADutitxdedxVne eMdu BAvisidare adu Barxme. vAsatxvavAgi jiVvAtamxnu paramAtamxnAdudariMda avanige saMcAra sAdhayxveV ilalx. EkeMdare BwtavasutxgaLu oMdu parimita sathxLadiMda \hbox{inonxMdu} parimita parxdeVshakekx saMcarisuvaMte, aparimita paramAtamxnu saMcarisalu sAdhayxvilalx. jiVvAtamxnige tananx nijasavxrUpada arivAdAga tAnu saMcarisutetxVneMba BarxmeyU hoVgutatxde:}
+\ullekha{kAyaparxkaqti, jiVvaparxkaqti, BAvaparxkaqti, saMcAraBarxme muMcade, saMcita duHkamaRMgaLa paknitxyalilx kuLiLxrade (savasaM. 8; meVLige. 1663-549); idaraMceya tiLi, muMcu beVga, niHkaLaMka malilxkAjuRnana nisasxMgada kUTa.}}
 \end{entry}
 
